# open-molecule-model

./: .gitignore  CLAUDE.md  Gemini.md  Graph_DiT_Readme.md  README.md  architecture.md  bootstrap.ps1  bootstrap.sh  config.yaml  config_memory_efficient.yaml  config_optimized.yaml  config_stable.yaml  config_unified.yaml  hyperparameter_search.py  pyproject.toml  requirements.txt  show_top_molecules.py  show_val_data.py  test_cuda.py
.claude/: settings.local.json
configs/: graph_dit_default.yaml
data/: ZINC-downloader-2D-smi.ps1  data_analysis_plan.md
data/archtecture_viz/: graph_dit.md  model_architecture_diagram.py
data/raw/AA/: AAAA.smi  AAAB.smi  AAAC.smi  AAAD.smi
docs/: DATA_PROCESSING_OPTIMIZATION_PLAN.md  DATA_PROCESSING_OPTIMIZATION_SUMMARY.md  IMPLEMENTATION_RECOMMENDATIONS.md  OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md
examples/: generate_molecules.py  optimize_molecules.py  train_graph_dit.py
src/: config.py  config_updater.py  data_analysis.py  data_loader.py  data_standardize.py  decoder.py  encoder.py  evaluate.py  logger.py  model.py  process_data.py  train.py  utils.py
src/graph_dit/: README.md  __init__.py  config.py  data.py  evaluation.py  generate_molecules.py  generator.py  guided_optimization.py  model.py  optimize_molecules.py  property_prediction.py  scheduler.py  train_graph_dit.py  trainer.py  unified_dataset.py
